# auto-fill

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
auto-fill/: index.ts  package.json  react-native-ohos-community-auto-fill-0.0.1.tgz
auto-fill/harmony/: auto_fill.har
auto-fill/harmony/auto_fill/: BuildProfile.ets  index.ets  oh-package.json5  ts.ts
auto-fill/harmony/auto_fill/src/main/: module.json5
auto-fill/harmony/auto_fill/src/main/cpp/: AutoFillPackage.h  AutoFillTurboModule.cpp  AutoFillTurboModule.h  CMakeLists.txt
auto-fill/harmony/auto_fill/src/main/ets/: AutoFillPackage.ts  AutoFillTurboModule.ts
auto-fill/harmony/auto_fill/src/main/ets/namespace/: autofill.ts  index.ts
auto-fill/src/: AutoFill.harmony.tsx  AutoFill.tsx  NativeAutoFillTurboModule.ts
tester/: App.tsx  package.json
tester/demo/: ContactsComponent.tsx  PasswordComponent.tsx
tester/harmony/: build-profile.template.json5
tester/harmony/AppScope/: app.json5
tester/harmony/entry/: oh-package.json5
tester/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
tester/harmony/entry/src/main/ets/: RNPackagesFactory.ts
tester/rnoh_package/: react-native-oh-tpl-react-native-gesture-handler-2.14.4.tgz  react-native-oh-tpl-react-native-safe-area-context-4.7.4-0.1.5.tgz  react-native-oh-tpl-stack-6.4.0-0.0.4.tgz  react-native-ohos-community-auto-fill-1.0.0.tgz
